# Assignments

./: CMakeLists.txt
ConstructorExample/: CMakeLists.txt  constructor_assignment.cpp  constructor_example
ConstructorExample/inc/: constructor_assignment.h
ConstructorExample/src/: constructor_assignment.cpp
FactoryMetod_Example/: CMakeLists.txt
FactoryMetod_Example/inc/: factorymethod.h
FactoryMetod_Example/src/: factorymethod.cpp
FriendFunction_class_example_lambdaexpression/: CMakeLists.txt  friendfuction_friendclass.h  friendfuction_friendclass_lambdaexperession.cpp  output
FriendFunction_class_example_lambdaexpression/src/: friendfuction_friendclass_lambdaexperession.cpp
FunctionPointer_Callbacks_Example/: CMakeLists.txt  funcptr_callbacks_example.cpp  funcptr_callbacks_example.h  output
FunctionPointer_Callbacks_Example/inc/: funcptr_callbacks_example.h
FunctionPointer_Callbacks_Example/src/: funcptr_callbacks_example.cpp
Inheritance/: inheritance_example.cpp  inheritance_example.h  output
Inheritance_uniforinitialization/: CMakeLists.txt  inheritance_example.cpp  output
Inheritance_uniforinitialization/inc/: inheritance_example.h
Inheritance_uniforinitialization/src/: inheritance_example.cpp
SharedPointerExample/: CMakeLists.txt  output  sharedPointerExample.cpp  sharedPointerExample.h
SharedPointerExample/src/: sharedPointerExample.cpp
SingleTon_Example/: CMakeLists.txt
SingleTon_Example/inc/: singletonexample.h
SingleTon_Example/src/: singletonexample.cpp
StrategyPattern/: CMakeLists.txt
StrategyPattern/inc/: strategypattern.h
StrategyPattern/src/: strategypattern.cpp
TemplateExample/: CMakeLists.txt  template_example  template_example.cpp
TemplateExample/inc/: template_example.h
TemplateExample/src/: template_example.cpp
Threads/: CMakeLists.txt  Thread_Concept.cpp  output
Vector_Map_Example/: CMakeLists.txt  excepn_vector  vector_map  vector_map_example.cpp
proj/: CMakeLists.txt
proj/inc/: proj_multihreading.h
proj/src/: a.out  proj_multihreading.cpp
