cmake_minimum_required(VERSION 2.8.9)
# Set the output folder where your program will be created
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_DIRECTORY ${CMAKE_BINARY_DIR}/build)
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-std=c++14")

add_subdirectory(ConstructorExample)
add_subdirectory(FactoryMetod_Example)
add_subdirectory(FriendFunction_class_example_lambdaexpression)
add_subdirectory(FunctionPointer_Callbacks_Example)
add_subdirectory(Inheritance_uniforinitialization)
add_subdirectory(proj)
add_subdirectory(SharedPointerExample)
add_subdirectory(SingleTon_Example)
add_subdirectory(StrategyPattern)
add_subdirectory(TemplateExample)
add_subdirectory(Threads)
add_subdirectory(Vector_Map_Example)
